# backend/app/Http/Routes/ProductMarketRoutes.php
@@ -1,9 +1,0 @@
-<?php
-
-use App\Http\Controllers\ProductMarketController;
-
-
-Route::prefix('product-market')->group(function () {
-    
-    Route::post('/assign/{ProductID}', [ProductMarketController::class, 'assignMarkets']);
-});
